test_suite/tests/ui/conflict/alias-enum.stderr
error: expected expression, found `@`
  --> tests/ui/conflict/alias-enum.rs:80:5
   |
80 |     @//fail
   |     ^ expected expression

warning: unreachable pattern
  --> tests/ui/conflict/alias-enum.rs:16:9
   |
11 |         #[serde(alias = "a", alias = "b", alias = "c")]
   |                                      --- matches all the relevant values
...
16 |         b: (),
   |         ^ no value can reach this
   |
   = note: `#[warn(unreachable_patterns)]` on by default

warning: unreachable pattern
  --> tests/ui/conflict/alias-enum.rs:15:25
   |
11 |         #[serde(alias = "a", alias = "b", alias = "c")]
   |                                                   --- matches all the relevant values
...
15 |         #[serde(alias = "c")]
   |                         ^^^ no value can reach this

warning: unreachable pattern
  --> tests/ui/conflict/alias-enum.rs:28:26
   |
25 |         #[serde(alias = "b", alias = "c")]
   |                                      --- matches all the relevant values
...
28 |         #[serde(rename = "c")]
   |                          ^^^ no value can reach this

warning: unreachable pattern
  --> tests/ui/conflict/alias-enum.rs:38:9
   |
36 |         #[serde(alias = "B", alias = "c")]
   |                         --- matches all the relevant values
37 |         a: (),
38 |         b: (),
   |         ^ no value can reach this

warning: unreachable pattern
  --> tests/ui/conflict/alias-enum.rs:52:5
   |
47 |     #[serde(alias = "a", alias = "b", alias = "c")]
   |                                  --- matches all the relevant values
...
52 |     b,
   |     ^ no value can reach this

warning: unreachable pattern
  --> tests/ui/conflict/alias-enum.rs:51:21
   |
47 |     #[serde(alias = "a", alias = "b", alias = "c")]
   |                                               --- matches all the relevant values
...
51 |     #[serde(alias = "c")]
   |                     ^^^ no value can reach this

warning: unreachable pattern
  --> tests/ui/conflict/alias-enum.rs:65:22
   |
62 |     #[serde(alias = "b", alias = "c")]
   |                                  --- matches all the relevant values
...
65 |     #[serde(rename = "c")]
   |                      ^^^ no value can reach this

warning: unreachable pattern
  --> tests/ui/conflict/alias-enum.rs:76:5
   |
74 |     #[serde(alias = "B", alias = "c")]
   |                     --- matches all the relevant values
75 |     a,
76 |     b,
   |     ^ no value can reach this
